<resources>
    <string name="app_name">Flashcards</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_to_folder">Add to Folder</string>
    <string name="rename">Rename</string>
    <string name="description">Description</string>
    <string name="learn">Learn</string>
    <string name="quiz">Quiz</string>
    <string name="terms">Terms</string>
    <string name="term">Term</string>
    <string name="def">Definition</string>
    <string name="title">Title</string>
    <string name="createFolderPopup">Create Folder</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="done">done</string>
</resources>